All games registration opening

--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -24,46 +24,51 @@
                     </tr>
                     <tr>
                         <td style="padding: 0 32px;">
-                            <strong>Привет, Турбо-снейкчане!</strong>
+                            <strong>Сегодня открывается регистрация на игры KostiConnect!</strong>
                         </td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;">Вы все "приложили" Турбо Билет, молодцы! </td>
+                        <td style="padding: 0 32px;">Это будет самая большая настольно-ролевая игротека онлайн в Рунете!</td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;">Для вас открывается предварительная регистрация! </td>
+                        <td style="padding: 0 32px;">Подходит ли для новичков? — ДА </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">Десятки систем? — ДА</td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">Эпики Эноа и Кавалерии? — ДА </td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;"><strong>Время: среда, <span style="white-space:nowrap">16.02.2022</span>, <span style="white-space:nowrap">14-00 MSK.</span></strong></td>
-                    </tr>
-                    <tr>
-                        <td style="padding: 0 32px;">Вы сможете зарегистрироваться на <strong>любые 2 игры</strong> раньше всех остальных.  </td>
+                        <td style="padding: 0 32px;">Ты уже купил билет в Snake City?</td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
                     </tr>
                     <tr>
                         <td style="padding: 0 32px;">
-                            <a href="https://www.kostirpg.com/kosticonnect/igry" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; background: #F07300; padding: 16px 24px; color: #fffffe ; font-weight: 700;" >Список игр</a>
+                            <a href="https://www.kostirpg.com/kosticonnect" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; background: #F07300; padding: 16px 24px; color: #fffffe ; font-weight: 700;" >Билеты</a>
                         </td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;">Убедитесь, что вы выбрали себе игры! </td>
+                        <td style="padding: 0 32px;">На мини-стриме мы расскажем все детали и подробности!</td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;"><strong>Запомните: вы сможете без ограничений продолжить регистрацию на другие игры в четверг, когда откроется общая запись!</strong></td>
+                        <td style="padding: 0 32px;">
+                            <a href="twitch.tv/vecherniyekosti" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; padding: 9px 16px; font-weight: 700; border: 3px solid #9147ff; color: #9147ff; border-radius: 4px; background: #fffffe;" >Live 21:00 MSK</a>
+                        </td>
                     </tr>
                 </table>
             </td>
