--- a/app/src/main/resources/site/pages/games/gamesBlock.html
+++ b/app/src/main/resources/site/pages/games/gamesBlock.html
@@ -35,7 +35,7 @@
                     data-th-src="${portal.assetUrl({'_path=images/gameSystems/default.jpg'})}">
                 <span class="k_games-seats">
                     <span data-th-unless="${game.processed.currUserPlays}">
-                        <span>места</span>
+                        <span>игроков</span>
                         <span data-th-class="${'js_game-seats-' + game.content._id}"
                             data-th-text="${game.processed.seatsReserved + '/' + game.content.data.maxPlayers}"></span>
                     </span>
