--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -81,6 +81,19 @@
                         data-th-text="${portal.localize({'_key=myGames.gameDetails.seats', '_locale=' + lang})}"></div>
                     <div class="k_gdp-value"
                         data-th-text="${game.processed.seatsReserved + '/' + game.content.data.maxPlayers}">0\5</div>
+
+                    <div class="my_games-text my_games-players-list">
+                        <div class="my_games-players-item">
+                            <span>
+                                <span class="label">Имя</span>
+                                <span class="value">Ярик</span>
+                            </span>
+                            <span>
+                                <span class="label">Дискорд</span>
+                                <span class="value">Диск</span>
+                            </span>
+                        </div>
+                    </div>
                 </div>
                 <div class="k_gdp-info">
                     <div class="k_gdp-label"
