Update players list onf game page

--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="k_gdp-value" data-th-utext="${game.processed.table}"></div>
                 </div>
-                <div class="k_gdp-info">
+                <div class="k_gdp-info m-gm_info">
                     <div class="k_gdp-label"
                         data-th-text="${portal.localize({'_key=myGames.gameDetails.seats', '_locale=' + lang})}"></div>
                     <div class="k_gdp-value"
