--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -109,6 +109,8 @@
                     </div>
                     <div class="k_gdp-value" data-th-utext="${game.processed.additionalInfo}"></div>
                 </div>
+                <button class="kosticonnect-button primary js_modal-show js_game-players-list"
+                    data-th-attr="data-gameId=${game.content._id}"> Список игроков</button>
             </div>
             <div class="k_gdp-early_access" data-th-unless="${formData.registerStarted}">
                 <h3 class="k_gdp-early_access-title"
