--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -4,6 +4,7 @@
 <head data-th-utext="${pageComponents.pagehead}"></head>
 
 <body class="kosticonnect-page landingPage">
+    <div data-th-remove="tag" data-th-utext="${pageComponents.modal}"></div>
     <div data-th-remove="tag" data-th-utext="${pageComponents.loginRegisterModal}"></div>
     <div data-th-remove="tag" data-th-utext="${pageComponents.festivalHeader}"></div>
     <main data-th-attr="data-id=${game.content._id}" class="kosticonnect-wrap k_games-wrap js_game-id">
@@ -111,8 +112,9 @@
                     </div>
                     <div class="k_gdp-value" data-th-utext="${game.processed.additionalInfo}"></div>
                 </div>
-                <button class="kosticonnect-button primary js_modal-show js_game-players-list"
-                    data-th-attr="data-gameId=${game.content._id}"> Список игроков</button>
+                <button data-th-if="${user && user.data.roles.moderator}"
+                    class="kosticonnect-button primary js_modal-show js_game-players-list"
+                    data-th-attr="data-gameId=${game.content._id}">Список игроков</button>
             </div>
             <div class="k_gdp-early_access" data-th-unless="${formData.registerStarted}">
                 <h3 class="k_gdp-early_access-title"
