OPen server mail

--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -14,60 +14,44 @@
             </td>
         </tr> -->
         <tr>
-            <td style="background: #fff; color: #11090F; padding: 0 0 34px 0; border-radius: 4px 4px 0px 0px; font-family: Arial; font-size: 16px; ">
+            <td style="background: #fff; color: #11090F; padding: 0; border-radius: 4px 4px 0px 0px; font-family: Arial; font-size: 16px; ">
                 <table border="0" cellpadding="0" cellspacing="0" align="center" width="506" style="color:#11090F; font-family: Arial; font-size: 16px;">
                     
                     <tr>
                         <td style="padding: 0 0;">
-                            <img data-th-src="${portal.assetUrl({'_path=images/mails/kosticonnect_registration.jpg', '_type=absolute'})}" alt="KostiCONnect 2022" width="100%">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="padding: 0 32px;">
-                            <strong>Сегодня открывается регистрация на игры KostiConnect!</strong>
+                            <img data-th-src="${portal.assetUrl({'_path=images/mails/open_server.jpg', '_type=absolute'})}" alt="KostiCONnect 2022" width="100%" style="display: block;">
                         </td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;">Это будет самая большая настольно-ролевая игротека онлайн в Рунете!</td>
-                    </tr>
-                    <tr>
-                        <td style="padding: 0 32px;">Подходит ли для новичков? — ДА </td>
-                    </tr>
-                    <tr>
-                        <td style="padding: 0 32px;">Десятки систем? — ДА</td>
-                    </tr>
-                    <tr>
-                        <td style="padding: 0 32px;">Эпики Эноа и Кавалерии? — ДА </td>
-                    </tr>
-                    <tr>
-                        <td style="height: 16px;"></td>
-                    </tr>
-                    <tr>
-                        <td style="padding: 0 32px;">Ты уже купил билет в Snake City?</td>
-                    </tr>
-                    <tr>
-                        <td style="height: 16px;"></td>
-                    </tr>
-                    <tr>
                         <td style="padding: 0 32px;">
-                            <a href="https://www.kostirpg.com/kosticonnect" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; background: #F07300; padding: 16px 24px; color: #fffffe ; font-weight: 700;" >Билеты</a>
+                            <strong>KostiCONnect уже вот-вот начнется. Как же попасть на сервер? Эта простая инструкция поможет вам открыть ворота фестиваля, следуя простым шагам.</strong>
                         </td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;">На мини-стриме мы расскажем все детали и подробности!</td>
+                        <td style="padding: 0 32px;">
+                            <ol style="padding-left: 10px;">
+                                <li>Убедитесь, что у вас открыты личные сообщения в дискорде. Если это не так, то Робокостя(официальный бот фестиваля KostiCONnect) не сможет с вами связаться</li>
+                                <li>Перейдите по этой <a style="color:#F07300"  target="_blank" rel="noreferrer" href="https://discord.com/invite/kosticonnect">ссылке.</a> </li>
+                                <li>Подключившись к серверу вы увидите одну лишь комнату - приветствие, в которой вам надо будет принять правила фестиваля.</li>
+                                <li>После принятия правил, Робокостя напишет вам в личные сообщения и попросит вас ввести билет. Вводить билет надо следующим образом !костя билет номер_билета, например !костя билет 1234567890</li>
+                                <li>После проверки вашего билета Робокостя выдаёт вам роль "Посетитель", или "Турбо посетитель", что и является пропуском на фестиваль.</li>
+                                <li>24 февраля в 16.00 МСК открываются голосовые каналы фестиваля для обсуждения, и ожидания открытия врат фестиваля.</li>
+                                <li>24 февраля в 17.00 МСК фестиваль официально открыт, и все комнаты, доступные вашему билету, будут открыты для вашего посещения.</li>
+                            </ol>
+                        </td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;">
-                            <a href="twitch.tv/vecherniyekosti" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; padding: 9px 16px; font-weight: 700; border: 3px solid #9147ff; color: #9147ff; border-radius: 4px; background: #fffffe;" >Live 21:00 MSK</a>
+                        <td style="padding: 0 0;">
+                            <img data-th-src="${portal.assetUrl({'_path=images/mails/Ticket.gif', '_type=absolute'})}" alt="KostiCONnect 2022" width="100%" style="display: block;">
                         </td>
                     </tr>
                 </table>
