--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -37,7 +37,7 @@
                         <td style="padding: 0 32px;">
                             <ol style="padding-left: 10px;">
                                 <li>Убедитесь, что у вас открыты личные сообщения в дискорде. Если это не так, то Робокостя(официальный бот фестиваля KostiCONnect) не сможет с вами связаться</li>
-                                <li>Перейдите по этой <a style="color:#F07300"  target="_blank" rel="noreferrer" href="https://discord.com/invite/kosticonnect">ссылке.</a> </li>
+                                <li>Перейдите по этой <a style="color:#F07300"  target="_blank" rel="noreferrer" href="https://discord.gg/kosticonnect">ссылке.</a> </li>
                                 <li>Подключившись к серверу вы увидите одну лишь комнату - приветствие, в которой вам надо будет принять правила фестиваля.</li>
                                 <li>После принятия правил, Робокостя напишет вам в личные сообщения и попросит вас ввести билет. Вводить билет надо следующим образом:<br/> <strong>!костя билет номер_билета</strong>,<br/> например <strong>!костя билет 1234567890</strong></li>
                                 <li>После проверки вашего билета Робокостя выдаёт вам роль <strong>"Посетитель"</strong>, или <strong>"Турбо посетитель"</strong>, что и является пропуском на фестиваль.</li>
