--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -16,10 +16,17 @@
         <tr>
             <td style="background: #fff; color: #11090F; padding: 0; border-radius: 4px 4px 0px 0px; font-family: Arial; font-size: 16px; ">
                 <table border="0" cellpadding="0" cellspacing="0" align="center" width="506" style="color:#11090F; font-family: Arial; font-size: 16px;">
-                    
                     <tr>
-                        <td style="padding: 0 0;">
-                            <img data-th-src="${portal.assetUrl({'_path=images/mails/open_server.jpg', '_type=absolute'})}" alt="KostiCONnect 2022" width="100%" style="display: block;">
+                        <td style="height: 16px;"></td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">
+                            <strong>Дорогие гости и участники KostiConnect!</strong>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">
+                            <strong>Фестиваль переносится!</strong>
                         </td>
                     </tr>
                     <tr>
@@ -27,32 +34,21 @@
                     </tr>
                     <tr>
                         <td style="padding: 0 32px;">
-                            <strong>KostiCONnect уже вот-вот начнется.<br/> Как же попасть на сервер?<br/> Эта простая инструкция поможет вам открыть ворота фестиваля, следуя простым шагам.</strong>
+                            К сожалению, текущая ситуация не позволяет нам провести KostiConnect, как планировалось.<br/>
+                            Поэтому мы переносим фестиваль. О новых сроках проведения сообщим вам позже.<br/>
+                            Все купленные билеты остаются действительными!<br/>
                         </td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;">
-                            <ol style="padding-left: 10px;">
-                                <li>Убедитесь, что у вас открыты личные сообщения в дискорде. Если это не так, то Робокостя(официальный бот фестиваля KostiCONnect) не сможет с вами связаться</li>
-                                <li>Перейдите по этой <a style="color:#F07300"  target="_blank" rel="noreferrer" href="https://discord.gg/kosticonnect">ссылке.</a> </li>
-                                <li>Подключившись к серверу вы увидите одну лишь комнату - приветствие, в которой вам надо будет принять правила фестиваля.</li>
-                                <li>После принятия правил, Робокостя напишет вам в личные сообщения и попросит вас ввести билет. Вводить билет надо следующим образом:<br/> <strong>!костя билет номер_билета</strong>,<br/> например <strong>!костя билет 1234567890</strong></li>
-                                <li>После проверки вашего билета Робокостя выдаёт вам роль <strong>"Посетитель"</strong>, или <strong>"Турбо посетитель"</strong>, что и является пропуском на фестиваль.</li>
-                                <li><strong>24 февраля в 16.00 МСК</strong> открываются голосовые каналы фестиваля для обсуждения, и ожидания открытия врат фестиваля.</li>
-                                <li><strong>24 февраля в 17.00 МСК</strong> фестиваль официально открыт, и все комнаты, доступные вашему билету, будут открыты для вашего посещения.</li>
-                            </ol>
+                        <td style="padding: 0 32px;">Спасибо за понимание.<br/>
+                            Любим вас!
                         </td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
-                    </tr>
-                    <tr>
-                        <td style="padding: 0 0;">
-                            <img data-th-src="${portal.assetUrl({'_path=images/mails/Ticket.gif', '_type=absolute'})}" alt="KostiCONnect 2022" width="100%" style="display: block;">
-                        </td>
                     </tr>
                 </table>
             </td>
